--- a/API/ormconfig.json
+++ b/API/ormconfig.json
@@ -1,10 +1,10 @@
 {
   "type": "mysql",
-  "host": "XXXXXXXXX",
+  "host": "localhost",
   "port": 3306,
-  "username": "XXXXXX",
-  "password": "XXXXXX",
-  "database": "XXXXXXXX",
+  "username": "root",
+  "password": "",
+  "database": "restaurante",
   "synchronize": true,
   "logging": false,
   "entities": ["src/entity/**/*.ts"],
