--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-load": "^1.1.16",
     "morgan": "^1.10.0",
     "promise-mysql": "^4.1.3"
   },
